# Practicas-Metaheuristicas-UGR

./: README.md
software/: CMakeLists.txt  README.txt
software/datos/: datos_BMB.csv  datos_CVOA.csv  datos_CVOA_17.csv  datos_CVOA_BLM.csv  datos_CVOA_ES.csv
software/datos/mejor_salida/: datos_AM1.csv  datos_AM2.csv  datos_AM3.csv  datos_CVOA.csv  datos_CVOA_20.csv  datos_CVOA_MEM.csv  datos_ES.csv  datos_ILS.csv  datos_ILSES.csv  datos_blm.csv  datos_gen_est_pos.csv  datos_gen_est_uni.csv  datos_gen_gen_pos.csv  datos_gen_gen_uni.csv  datos_greedy.csv
software/include/: lectorDatos.h  solucionBLM.h  solucionBMB.h  solucionCVOA.h  solucionCVOA_cec17.h  solucionES.h  solucionGenetica.h  solucionGreedy.h  solucionILS.h  solucionILSES.h  solucionMemetica.h
software/src/: lectorDatos.cpp  main.cpp  solucionBLM.cpp  solucionBMB.cpp  solucionCVOA.cpp  solucionCVOA_cec17.cpp  solucionES.cpp  solucionGenetica.cpp  solucionGreedy.cpp  solucionILS.cpp  solucionILSES.cpp  solucionMemetica.cpp
